--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -10,4 +10,12 @@
         android:layout_width="35dp"
         android:layout_height="35dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/loading"
+        android:textSize="20sp"
+        android:fontFamily="@font/open_sans"
+        android:layout_marginTop="25dp"/>
+
 </LinearLayout>
