--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -49,15 +49,38 @@
                 android:id="@+id/text_thank_you"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="15dp"
                 android:fontFamily="@font/open_sans"
-                android:hint="@string/text_thank_you" />
+                android:text="@string/thank_you_text" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="25dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginEnd="25dp"
+                    android:onClick="onFacebookClick"
+                    android:src="@drawable/ic_facebook_icon" />
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:onClick="onTwitterClick"
+                    android:src="@drawable/ic_twitter_icon" />
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/button_start_new_session"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="25dp"
+                android:layout_gravity="center_horizontal"
                 android:background="@drawable/rounded_border_bg"
                 android:fontFamily="@font/open_sans"
                 android:minHeight="0dp"
@@ -100,7 +123,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
                 <ImageView
