--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/menu_item_enable_test"
-        android:title="@string/enable_test"
-        android:checkable="true"
-        app:showAsAction="never"
-        app:actionViewClass="android.widget.CheckBox" />
+        android:id="@+id/menu_item_translate"
+        android:title="@string/choose_language"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_translate"/>
+
 </menu>
